🔨 Fixed Inconsistency in the svg icon size. 🔨 Changed the icon side on mobile to reduce scroll distance.

--- a/src/styles/pages/index.css
+++ b/src/styles/pages/index.css
@@ -197,19 +197,23 @@
           gap: 0.2rem;
           height: 100%;
           padding-left: 0rem;
+          margin-left: 2rem;
           .languages,
           .frameworks {
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
-            gap: 4rem;
+            gap: 1rem;
             height: 100%;
-            margin-left: 2rem;
             .language,
             .framework {
               display: flex;
               flex-direction: column;
               cursor: pointer;
+              svg {
+                height: 32px !important;
+                width: 32px !important;
+              }
               .tooltip {
                 display: flex;
                 position: absolute;
@@ -233,7 +237,7 @@
         .contacts {
           display: flex;
           flex-direction: row;
-          gap: 4rem;
+          gap: 1rem;
           height: 100%;
           margin-left: 2rem;
           .contact {
@@ -245,6 +249,10 @@
               flex-direction: column;
               text-decoration: none;
               color: inherit;
+              svg {
+                height: 32px !important;
+                width: 32px !important;
+              }
               .tooltip {
                 display: flex;
                 position: absolute;
